--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -1,3 +1,5 @@
+<p-breadcrumb [model]="items"></p-breadcrumb>
+
 <div class="p-fluid">
   <div class="p-field">
     <h3>Lessons available:</h3>
@@ -7,7 +9,7 @@
     <p>Lesson n1</p>
   </div>
   <div class="p-field" style="width: min-content">
-    <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-warning"></button>
+    <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-warning" routerLink="/lesson"></button>
   </div>
   <hr style="color: transparent;"/>
   <div class="p-field">
