added service for homepage

--- a/frontend/src/app/lesson/lesson.component.html
+++ b/frontend/src/app/lesson/lesson.component.html
@@ -2,7 +2,7 @@
 <div class="center">
   <div class="p-fluid">
     <div class="p-field">
-      <p><b>Name:</b> </p>
+      <p><b>Name:</b> {{id}}</p>
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
