--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -5,17 +5,13 @@
     <h3>Lessons available:</h3>
   </div>
   <hr style="color: transparent;"/>
-  <div class="p-field">
-    <p>Lesson n1</p>
-  </div>
-  <div class="p-field" style="width: min-content">
-    <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-warning" routerLink="/lesson"></button>
-  </div>
-  <hr style="color: transparent;"/>
-  <div class="p-field">
-    <p>Lesson n2</p>
-  </div>
-  <div class="p-field" style="width: min-content">
-    <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-warning"></button>
+  <div *ngFor="let lesson of lessons">
+    <div class="p-field">
+      <p>{{lesson.lessonName}}</p>
+    </div>
+    <div class="p-field" style="width: min-content">
+      <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-warning" [routerLink]="lesson.link"></button>
+    </div>
+    <hr style="color: transparent;"/>
   </div>
 </div>
