--- a/frontend/src/app/lesson/lesson.component.html
+++ b/frontend/src/app/lesson/lesson.component.html
@@ -2,27 +2,27 @@
 <div class="center">
   <div class="p-fluid">
     <div class="p-field">
-      <p><b>Name:</b> {{id}}</p>
+      <p><b>Name:</b> {{name}}</p>
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
-      <p><b>Instrument:</b> </p>
+      <p><b>Instrument:</b> {{instrument}}</p>
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
-      <p><b>Teacher:</b> </p>
+      <p><b>Teacher:</b> {{teacher}}</p>
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
-      <p><b>Date:</b> </p>
+      <p><b>Date:</b> {{date}}</p>
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
-      <p><b>Duration:</b> </p>
+      <p><b>Duration:</b> {{duration}}</p>
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
-      <p><b>Cost:</b> €</p>
+      <p><b>Cost:</b>{{cost}} €</p>
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
