added auth and login services (not working yet)

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,14 +2,14 @@
   
   <div class="p-fluid">
     <div class="p-field">
-        <input id="username" type="text" pInputText placeholder="Username"> 
+        <input id="username" type="text" pInputText placeholder="Username" [(ngModel)]="username"/> 
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
-        <input id="password" type="password" pPassword placeholder="Password">
+        <input id="password" type="password" pPassword placeholder="Password" [(ngModel)] = "password" />
     </div>
     <hr style="color: transparent;"/>
-    <button pButton pRipple type="button" label="Login" class="p-button-raised p-button-info"></button>
+    <button pButton pRipple type="button" label="Login" class="p-button-raised p-button-info" (click)=login()></button>
 
   </div>
 
