--- a/frontend/src/app/lessonsbooked/lessonsbooked.component.html
+++ b/frontend/src/app/lessonsbooked/lessonsbooked.component.html
@@ -1,4 +1,15 @@
 <p-breadcrumb [model]="items"></p-breadcrumb>
-<p>
-  lessonsbooked works!
-</p>
+<div class="p-fluid">
+  <div class="p-field">
+    <h3>My lessons:</h3>
+  </div>
+  <hr style="color: transparent;"/>
+  <!--<div *ngFor="">-->
+  <div class="p-field">
+    <p></p>
+  </div>
+  <div class="p-field" style="width: min-content">
+    <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-danger"></button>
+  </div>
+  <!--</div>-->
+</div>
