--- a/frontend/src/app/registration/registration.component.html
+++ b/frontend/src/app/registration/registration.component.html
@@ -21,7 +21,7 @@
       <p-dropdown [options]="users" [(ngModel)]="selectedUser" aria-required="true"></p-dropdown>    
     </div>
     <hr style="color: transparent;"/>
-    <button pButton pRipple type="button" label="Sign up" class="p-button-raised p-button-help" (click)=signUp()></button>
+    <button pButton pRipple type="submit" label="Sign up" class="p-button-raised p-button-help" (click)=signUp()></button>
 
   </div>
 
