--- a/frontend/src/app/lessonsbooked/lessonsbooked.component.html
+++ b/frontend/src/app/lessonsbooked/lessonsbooked.component.html
@@ -9,7 +9,7 @@
     <p></p>
   </div>
   <div class="p-field" style="width: min-content">
-    <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-danger"></button>
+    <button pButton pRipple type="button" label="Delete" class="p-button-raised p-button-danger"></button>
   </div>
   <!--</div>-->
 </div>
