--- a/frontend/src/app/lesson/lesson.component.html
+++ b/frontend/src/app/lesson/lesson.component.html
@@ -26,7 +26,7 @@
     </div>
     <hr style="color: transparent;"/>
     <div class="p-field">
-      <button pButton pRipple type="button" label="Add lesson" class="p-button-raised p-button-success"></button>
+      <button pButton pRipple type="button" label="Add lesson" class="p-button-raised p-button-success" (click)=add()></button>
     </div>
   </div>  
 </div>
