--- a/frontend/src/app/lessonsbooked/lessonsbooked.component.html
+++ b/frontend/src/app/lessonsbooked/lessonsbooked.component.html
@@ -4,10 +4,10 @@
     <h3>My lessons:</h3>
   </div>
   <hr style="color: transparent;"/>
-  <!--<div *ngFor="">-->
-  <div class="p-field">
-    <p></p>
-  </div>
+  <div *ngFor="let book of booking">
+    <div class="p-field">
+      <p>{{book.lesson.name}}</p>
+    </div>
   <div class="p-field" style="width: min-content">
     <button pButton pRipple type="button" label="Delete" class="p-button-raised p-button-danger"></button>
   </div>
