--- a/frontend/src/app/homepage-teacher/homepage-teacher.component.html
+++ b/frontend/src/app/homepage-teacher/homepage-teacher.component.html
@@ -1,3 +1,17 @@
-<p>
-  homepage-teacher works!
-</p>
+
+
+<div class="p-fluid">
+  <div class="p-field">
+    <h3>My Lessons:</h3>
+  </div>
+  <hr style="color: transparent;"/>
+  <div *ngFor="let lesson of lessons">
+    <div class="p-field">
+      <p>{{lesson.name}}</p>
+    </div>
+    <div class="p-field" style="width: min-content">
+      <button pButton pRipple type="button" label="Info" class="p-button-raised p-button-warning" ></button>
+    </div>
+    <hr style="color: transparent;"/>
+  </div>
+</div>
